<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.signup.SignUpFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_sub_heading"
        android:gravity="center"
        android:layout_marginTop="@dimen/_12ssp"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_il"
        style="@style/TextInputLayout.White.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:padding="@dimen/_1sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/name_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            style="@style/TextInputLayout.EditText.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:text=""
            app:hintTextColor="@color/dark_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/email"
        android:layout_marginTop="@dimen/_12sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/name_il" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_il"
        style="@style/TextInputLayout.White.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:padding="@dimen/_1sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            style="@style/TextInputLayout.EditText.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:text=""
            app:hintTextColor="@color/dark_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_tv_il"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_il" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_il"
        style="@style/TextInputLayout.White.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:padding="@dimen/_1sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_tv_il">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            style="@style/TextInputLayout.EditText.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="email"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text=""
            app:hintTextColor="@color/dark_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_il" />

    <TextView
        android:id="@+id/forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/agree_with"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <TextView
        android:id="@+id/term_condition_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/terms_and_condition"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/_11ssp"
        android:layout_marginStart="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/forgot_btn"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_12ssp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up_without_underline"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/shadow_on_dark"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="@+id/materialButton"
        app:layout_constraintStart_toStartOf="@+id/materialButton"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_17sdp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signip_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2ssp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_in_underline"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />



</androidx.constraintlayout.widget.ConstraintLayout>