<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.login.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_welcome_back_you_ve_been_missed"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/email_il"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/light_grey_round"
        android:hint="Email"
        android:padding="@dimen/_1sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_17sdp"
        android:textColorHint="@color/dark_grey"
        android:layout_marginTop="@dimen/_4sdp"
        android:imeOptions="actionNext"
        android:inputType="textEmailSubject"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/password_tv_il"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12ssp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_il" />

    <EditText
        android:id="@+id/password_il"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/light_grey_round"
        android:text="07:55 AM"
        android:padding="@dimen/_1sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_tv_il" />

    <TextView
        android:id="@+id/forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="@+id/password_il"
        app:layout_constraintTop_toBottomOf="@+id/password_il" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_12ssp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_in"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/forgot_btn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/shadow_on_dark"
        app:layout_constraintBottom_toBottomOf="@+id/signin_btn"
        app:layout_constraintEnd_toEndOf="@+id/signin_btn"
        app:layout_constraintStart_toStartOf="@+id/signin_btn"
        app:layout_constraintTop_toBottomOf="@+id/signin_btn" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />


</androidx.constraintlayout.widget.ConstraintLayout>