<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.home.HomeFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/_180sdp"
        android:background="@drawable/round_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="Home"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/good_morning"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:src="@drawable/ic_pin"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/city_place_holder"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/time_clock_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:backgroundTint="@color/white"
        android:text="Time Clock"
        android:textColor="@color/blue_main"
        app:cornerRadius="@dimen/_6sdp"
        app:icon="@drawable/ic_timer"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_marginEnd="@dimen/_17sdp"
        app:iconGravity="textStart"
        app:iconTint="@color/blue_main"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6" />


    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/place_holder"
        android:layout_marginEnd="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/my_logs"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/view_all"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logs_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:listitem="@layout/item_logs" />
</androidx.constraintlayout.widget.ConstraintLayout>